@@ -1,3 +1,9 @@
+2011-12-19  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* gdb.base/reread.exp: If srcfile2 fails to build retry it with
+	-DNO_SECTIONS.
+	* gdb.base/reread2.c <!NO_SECTIONS>: New sections block.
+
 2011-12-16  Phil Muldoon  <pmuldoon@redhat.com>
 
 	* gdb.python/py-function.exp: Change "on" to "full" for
